the y axis is fixed by using css and kendo y axis marked visible=false

--- a/src/app/layout/route-paths/route-paths.component.scss
+++ b/src/app/layout/route-paths/route-paths.component.scss
@@ -22,6 +22,11 @@
   margin-top: 1%;
 }
 
+.layer{
+  background-color: rgb(182, 190, 188);
+  width: 820px;
+}
+
 .charts {
   overflow-x: auto;
   overflow-y: hidden;
@@ -41,6 +46,36 @@
   background-color: #f5f5f5;
   border-left: 1px solid #ddd;
 }
+
+.layer ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end; /* Aligns text to the right */
+  position: relative;
+  left: 0; /* Adjust to align with Y-axis */
+  top: 38px; /* Adjust according to chart position */
+  transform: translateY(-50%);
+}
+
+.layer li {
+  position: absolute;
+  left: 10px;
+  text-align: right;
+  white-space: nowrap;
+  font-size: 14px;
+  color: black;
+}
+
+.layer li:nth-child(1) { top: 0px; } /* Adjust based on Y-axis scale */
+.layer li:nth-child(2) { top: 30px; }
+.layer li:nth-child(3) { top: 60px; }
+.layer li:nth-child(4) { top: 90px; }
+.layer li:nth-child(5) { top: 125px; }
+.layer li:nth-child(6) { top: 155px; }
+
 
 
 .chart-toolbar button:hover {
